<resources>
    <string name="app_name">MyShopPal</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Conditions </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>

    <string name="registered_successfully">you are registered successfully.</string>
    <!--START-->
    <string name="please_wait">Please Wait&#8230;</string>
    <!--END-->

    <string name="title_forgot_password">FORGOT PASSWORD!</string>
    <string name="forgot_title_description">Enter the username and email address
        we\'ll send you an email to reset you password.</string>
    <string name="button_lbl_submit">Submit</string>
    <string name="register_success">You are registered successfully.</string>

    <!--profile activity strings-->
    <!--START-->
    <string name="title_complete_profile">COMPLETE YOUR PROFILE</string>
    <string name="title_edit_profile">EDIT YOUR PROFILE</string>

    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="permission_denied_string">Oops! permission denied,you can also make that from the settings</string>
    <string name="permission_granted_string">Now you have the permission</string>
    <string name="already_have_the_permission_string">You already have the  permission.</string>
    <string name="image_selection_failed">Image selection failed</string>
    <!--END-->
    <string name="err_msg_enter_mobile_number">Please enter your mobile number.</string>
    <string name="user_profile_details_are_complete">Your details are complete thanks</string>
    <string name="profile_updated_successfully">Your profile updated successfully</string>
    <!--string name="title_activity_dashboard">DashboardActivity</string> -->

    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="action_settings">Settings</string>
    <!--string resources to settings activity-->

    <string name="title_settings">Setting</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <!--string resources to product fragment-->
    <string name="action_add_product">Add Product</string>
    <string name="product_title">Product Title</string>
    <string name="product_price">Product Price($)</string>
    <string name="product_description">Product Description</string>
    <string name="product_quantity">Product Quantity</string>
    <!--string resources to add new product activity-->
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>
    <string name="err_msg_enter_the_image_of_the_product">Please enter image of the product.</string>
    <string name="product_uploaded_success_message">Product uploaded successfully</string>
    <string name="no_products_added_yet">No products added yet!</string>
    <string name="no_dashboard_items_found">No items found!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_deleted_successfully">Product deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">"Are you sure you want to delete the product?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--strings of product details activity-->
    <!--START-->
    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <!--END-->
    <string name="bnt_lbl_add_to_cart">ADD TO CART</string>
    <string name="cart_item_uploaded_success_message">Item added to your cart successfully</string>
    <string name="action_go_to_cart_activity">Go to cart</string>
    <!--strings in the cart activity-->
    <!--START-->
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_for_available_stock">Available stock is %1$s!.You can not add more than stock quantity.</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <!--END-->

    <!--strings for add address layout-->
    <!--START-->
    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>
    <!--END-->
    <!--strings of add edit address layout-->
    <!--START-->
    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>
    <string name="msg_your_address_added_successfully">Address added successfully</string>
    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>
    <string name="msg_your_address_deleted_successfully">Your address is deleted successfully.</string>

    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="title_select_address">Select Address</string>


    <!--END-->
    <!--strings of checkout activity-->
    <!--START-->
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="msg_order_placed_success">Order placed successfully</string>

    <!--END-->
    <string name="msg_nothing_to_display">Nothing to display!.</string>
    <!--strings of orders activity-->
    <!--START-->
    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="order_status_in_process">In Process</string>

    <!--END-->
    <!--START-->
    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_yet">No products sold yet!</string>
    <!--END-->
    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>
</resources>